<resources>
    <string name="app_name">Test Android Fetures</string>
    <string name="selected_item">Selected item:</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="applicant_name">Android Recorder</string>
    <string name="no_data_found">No data found..!!</string>


    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="test_wifi">Test Wifi</string>
    <string name="test_gps">Test GPS</string>
    <string name="test_vibration">Test Vibration</string>
    <string name="test_screen_record">Test Screen Record</string>
    <string name="test_bluetooth">Test Bluetooth</string>
    <string name="test_send_sms">test Send sms</string>
    <string name="text_to_speech">Text To Speech</string>
    <string name="speech_to_text">Speech To Text</string>
    <string name="test_audio_record">Test Audio Record</string>
</resources>